--- a/main.css
+++ b/main.css
@@ -1,9 +1,159 @@
-body {
-    background-color: powderblue;
-  }
-  h1 {
-    color: blue;
-  }
-  p {
-    color: red;
-  }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+body{
+  overflow: hidden;
+  font-family: sans-serif; 
+  height: 100vh;  
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  background-color: #FFFFFF;
+}
+
+.menu{
+  height: 1000px;
+  /* position: fixed; */
+  left: 0;
+  top: 0;
+  /* width: 150px; */
+  background-color: #191718; 
+  color: #AAAAAA;
+  transition: 0.5s;
+  flex: 78;
+}
+.menu ul li{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+  transition: 0.3s;
+}
+
+.menu ul li a{
+  display: block;
+  color: #AAAAAA;
+  padding: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+
+}
+
+.menu ul li a:hover{
+  background-color: #5C5C5C;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+.menu i{
+
+  cursor: pointer;
+  margin-left: 25px;
+  margin-top: 25px;
+  padding: 15px 15px;
+  color: white;
+  z-index: 99;
+  transition: 0.5s;
+  margin-left: 190px;
+  position: absolute;
+}
+
+.content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 922;
+}
+
+.content .form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 85%;
+  height: 210px;
+  margin: 0 auto 0 auto;
+  background-color: #EFEFEF;
+  align-items: center;
+  text-align: center;
+}
+
+h1{
+  padding-top: 20px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+}
+
+.content .form p{
+  width: 800px;
+  padding-bottom: 20px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.content .img img{
+  width: 270px;
+  height: 110px;
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.content .part{
+  display: flex;
+  justify-content: space-between;
+  width: 85%;
+  margin: 0 auto 0 auto;
+  flex-wrap: wrap;
+}
+
+.feature-1{
+  flex: 1;
+}
+.feature-2{
+  flex: 1;
+}
+.feature-3{
+  flex: 1;
+}
+
+.content .part img{
+  width: 100px;
+  height: 100px;
+  padding-right: 5px;
+}
+
+.content .part .image{
+  display: flex;
+  padding-top: 5px;
+}
+
+.content .part p{
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.content .footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  border-top: 1px solid #DEDEDE;
+
+}
+
+.content .footer p{
+  position: relative;
+  padding-left: 7%;
+  padding-top: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #3E3E3E;
+}
