--- a/main.css
+++ b/main.css
@@ -11,6 +11,14 @@ body{
   height: 100vh;  
 }
 
+#open{
+  display: none;
+}
+
+.open{
+  height: 80px;
+  width: 80px;
+}
 
 .container{
   display: flex;
@@ -37,7 +45,6 @@ body{
   padding: 20px;
   text-transform: uppercase;
   font-size: 16px;
-
 }
 
 .menu ul li a:hover{
@@ -46,7 +53,6 @@ body{
   font-weight: bold;
 }
 .menu i{
-
   cursor: pointer;
   margin-left: 25px;
   margin-top: 25px;
@@ -157,8 +163,39 @@ h1{
 }
 
 @media only screen and (max-width: 600px) {
-  .menu{
-    display: none;
+  .mobile{
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100px;
+    padding-top: 60px;
+    background-color: #212121; 
+    transition: 0.5s;
+    transform: translateX(-250px);
+  }
+  .menu ul li a{
+    padding: 15px;
+    font-size: 12px;
+  }
+  .open i{
+    font-size: 25px;
+    cursor: pointer;
+    margin-left: 25px;
+    margin-top: 25px;
+    background-color: #000;
+    padding: 15px 15px;
+    color: white;
+    z-index: 99;
+  }
+  #open:checked ~ .mobile{
+    transition: 0.5s;
+    transform: translateX(0);
+  }
+  #open:checked ~ .open i{
+    transition: 0.5s;
+    margin-left: 190px;
+    position: absolute;
   }
   .content .img img{
     width: 135px;
@@ -190,7 +227,7 @@ h1{
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 601px) and (max-width:900px) {
   .content .img img{
     width: 200px;
     height: 80;
